--- a/site/app/stylesheets/console/_application.scss
+++ b/site/app/stylesheets/console/_application.scss
@@ -40,7 +40,6 @@
 }
 
 .section-header > .application-info {
-  padding-bottom: 10px;
 
   > .url {
     line-height: 36px; // chosen to match h1
