--- a/site/app/stylesheets/console/_navbar.scss
+++ b/site/app/stylesheets/console/_navbar.scss
@@ -42,7 +42,7 @@
 	background: #000;
   text-transform: uppercase;
   position: absolute;
-  top: 23px;
+  top: 16px;
   margin: 0;
   padding: 0;
   white-space: nowrap;
